# SimpleGameLibrary

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  makefile
ext/: CMakeLists.txt  makefile
ext/glad/include/glad/: gl.h
ext_tests/: glfw_breath.h  glm_breath.h  ut_all.cpp
sgf_audio/: CMakeLists.txt  CMakePresets.json
sgf_audio/include/sgf/audio/: audio_context.h  audio_data.h  audio_data_id.h  audio_data_manager.h  audio_data_resolver.h  audio_group.h  audio_source.h  audio_source_id.h  audio_source_manager.h  listener.h
sgf_audio/include/sgf/audio/utils/: vector3.h
sgf_audio/src/sgf/audio/: audio_context.cpp  audio_data.cpp  audio_group.cpp  audio_source.cpp  audio_source_manager.cpp  listener.cpp
sgf_audio/src/sgf/audio/utils/: vector3.cpp
sgf_control/: CMakeLists.txt  CMakePresets.json
sgf_control/include/sgf/control/: game_control_context.h  game_frame_phase.h  game_loop.h  game_time.h
sgf_control/src/sgf/control/: game_control_context.cpp  game_loop.cpp  game_time.cpp
sgf_platform/: CMakeLists.txt  CMakePresets.json
sgf_platform/include/sgf/platform/: gl_control.h  platform_context.h  platform_runtime.h  window.h
sgf_platform/include/sgf/platform/input/: input.h  key.h  key_mapper.h  keyboard.h  mouse.h
sgf_platform/include/sgf/platform/window/: window.h  window_id.h  window_manager.h
sgf_platform/internal_include/sgf/platform/input/: keyboard_input_injector.h  mouse_input_injector.h
sgf_platform/src/: window.cpp  window_manager.cpp
sgf_platform/src/sgf/platform/: gl_control.cpp  platform_context.cpp  platform_runtime.cpp  window.cpp
sgf_platform/src/sgf/platform/input/: input.cpp  key_mapper.cpp  keyboard.cpp  keyboard_input_injector.cpp  mouse.cpp  mouse_input_injector.cpp
sgf_platform/src/sgf/platform/window/: window.cpp  window_manager.cpp
sgf_platform/test/: platform_context_test.h  ut_all.cpp  util.hpp  window_manager_test.h  window_test.h
sgf_platform/test/unit_test/: input_test.h  platform_context_test.h  ut_all.cpp
sgf_rendering/: CMakeLists.txt  CMakePresets.json
sgf_rendering/include/: material.h  material.tpp  material_id.h  material_id.tpp  mesh.h  mesh.tpp  mesh_id.h  mesh_id.tpp  render_context.h  renderable.h  renderable.tpp  renderable_id.h  renderable_id.tpp  shader.h  shader.tpp  shader_id.h  shader_id.tpp  shader_manager.h  texture_2d.h  texture_2d.tpp  texture_2d_id.h  texture_2d_id.tpp  vertex_layout.h
sgf_rendering/include/sgf/rendering/: camera.h  material.h  material_id.h  mesh.h  mesh_id.h  projection.h  render_context.h  renderable.h  renderable_id.h  shader.h  shader_id.h  texture_2d.h  texture_2d_id.h  uniform.h  uniform_id.h  uniform_provider.h  unsafe_gl_context.h  vertex_layout.h
sgf_rendering/src/: material.cpp  mesh.cpp  render_context.cpp  renderable.cpp  renderable_id.cpp  shader.cpp  shader_id.cpp  shader_manager.cpp  texture_2d.cpp  unsafe_gl_context.cpp  vertex_layout.cpp
sgf_rendering/src/sgf/rendering/: camera.cpp  material.cpp  mesh.cpp  projection.cpp  render_context.cpp  renderable.cpp  shader.cpp  texture_2d.cpp  uniform_id.cpp  uniform_provider.cpp  unsafe_gl_context.cpp  vertex_layout.cpp
sgf_rendering/test/: image_test.h  renderable_test.h  shader_manager_test.h  shader_test.h  texture_2d_test.h  unsafe_gl_context_test.h  ut_all.cpp  utils.h  vertex_layout_test.h
sgf_rendering/test/resources/: image.tif
sgf_rendering/test/utils/: opengl_context_util.hpp
sgf_utils/: CMakeLists.txt  CMakePresets.json
sgf_utils/include/: id_generator.tpp  resource.h  resource.tpp  resource_id.h  resource_id.tpp  type_name.h
sgf_utils/include/sgf/utils/: id_generator.h  id_generator.tpp  manager.h  manager.tpp  resource.h  resource.tpp  resource_id.h  resource_id.tpp
sgf_utils/include/sgf/utils/exceptions/: initialization_failed.h  invalid_state.h  resource_not_found.h
sgf_utils/include/sgf/utils/logger/: log.h  logger.h  logger_spdlog_adapter.h
sgf_utils/src/exceptions/: resource_not_found.cpp
sgf_utils/src/sgf/utils/exceptions/: initialization_failed.cpp  invalid_state.cpp  resource_not_found.cpp
sgf_utils/src/sgf/utils/logger/: log.cpp  logger_spdlog_adapter.cpp
sgf_utils/test/: logger_test.h  manager_test.h  ut_all.cpp  util.hpp
simple_rendering/: CMakeLists.txt  makefile
simple_rendering/include/: shader.h  shader_id.h  shader_manager.h  window.h  window.tpp  window_id.h  window_manager.h  window_manager.tpp
simple_rendering/include/renderable/: image.h  material.h  mesh.h  renderable.h  renderable_id.h  texture_2d.h  vertex_layout.h
simple_rendering/include/renderable/shapes/: polygon.h  rectangle.h  triangle.h
simple_rendering/src/: shader.cpp  shader_id.cpp  shader_manager.cpp  window.cpp  window_id.cpp  window_manager.cpp
simple_rendering/src/renderable/: image.cpp  material.cpp  mesh.cpp  renderable.cpp  renderable_id.cpp  texture_2d.cpp  vertex_layout.cpp
simple_rendering/src/renderable/shapes/: polygon.cpp  rectangle.cpp  triangle.cpp
simple_rendering/test/: image_test.h  renderable_test.h  shader_manager_test.h  shader_test.h  shape_polygon_test.h  shape_rectangle_test.h  shape_test.h  shape_triangle_test.h  test_env.h  texture_2d_test.h  ut_all.cpp  util.hpp  vertex_layout_test.h  window_manager_test.h  window_test.h
test/: color_triangle_breath.h  simple_rendering_breath.h  ut_all.cpp
